[package]
name = "web_demo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
jsonwebtoken = "8.0"
serde = "1"
time = "0.3"
salvo = { version = "0.57", features = ["rate-limiter", "oapi", "jwt-auth", "anyhow"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.108"
thiserror = "1.0.50"
